--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Localweb</string>
+        // Strings personalizadas para o inglês
+        // que será o idioma padrão da aplicação
+        <string name="login">Login</string>
+        <string name="subtitle">Please, provide your information</string>
+        <string name="email">""</string>
+        <string name="password">Enter your password</string>
+        <string name="enter">Enter</string>
+
 </resources>
